# FaceRecognition

./: CMakeLists.txt  README.md
inc/: Definitions.h  FaceDetector.h
src/: FaceDetector.cpp  main.cpp
